.conflict-side-1/kubernetes/apps/media/radarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
      services:
        - name: radarr
          port: 7878
  tls: {}
